monitoring/grafana-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-grafana-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cluster.skyf0l.dev`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
